--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#####################################
+datasets/
+logs/
+debug.py
+#####################################
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
